app/components/primer/alpha/action_list.pcss
/* ... */
/* ActionList::Item */

.ActionListItem {
  position: relative;
  list-style: none;
  background-color: var(--control-transparent-bgColor-rest);
  border-radius: var(--borderRadius-medium);

  /* state */

  &:hover,
  &:active {
    cursor: pointer;
  }

  /* hide dividers  */
  @media (hover: hover) {
    &:hover {
      & .ActionListItem-label::before,
      & + .ActionListItem .ActionListItem-label::before {
        visibility: hidden;
      }

      & .ActionListItem-descriptionWrap--inline::before,
      & + .ActionListItem .ActionListItem-descriptionWrap--inline::before {
        visibility: hidden;
      }
    }
  }

  /* Make sure that the first visible item isn't a divider */
  &[hidden] + .ActionList-sectionDivider {
    display: none;
  }

  /* collapse styles here */
  &.ActionListItem--hasSubItem {
    /* first child */
    & > .ActionListContent {
      z-index: 1;

      @media (hover: hover) {
        &:hover {
          background-color: var(--control-transparent-bgColor-hover);
        }
      }

      &:active {
        background-color: var(--control-transparent-bgColor-active);
      }
    }
  }

  /* only hover li without list as children */
  &:not(.ActionListItem--hasSubItem),
   /* target contents of first child li if sub-item (li wraps item label + nested ul) */
  &.ActionListItem--hasSubItem > .ActionListContent {
    @media (hover: hover) {
      &:hover {
        cursor: pointer;
        background-color: var(--control-transparent-bgColor-hover);

        &:not(.ActionListItem--navActive, :focus-visible) {
          /* Support for "Windows high contrast mode" */
          outline: solid var(--borderWidth-thin) transparent;
          outline-offset: calc(-1 * var(--borderWidth-thin));
          box-shadow: var(--boxShadow-thin) var(--control-transparent-borderColor-active);
        }
      }
    }

    &:active {
      background: var(--control-transparent-bgColor-active);

      &:not(.ActionListItem--navActive) {
        /* Support for "Windows high contrast mode" https:sarahmhigley.com/writing/whcm-quick-tips/ */
        outline: solid var(--borderWidth-thin) transparent;
        outline-offset: calc(-1 * var(--borderWidth-thin));
        box-shadow: var(--boxShadow-thin) var(--control-transparent-borderColor-active);
      }

      & .ActionListItem-label::before,
      & + .ActionListItem .ActionListItem-label::before {
        visibility: hidden;
      }
    }
  }

  /* Autocomplete [aria-selected] items */

  &[aria-selected='true'] {
    font-weight: var(--base-text-weight-normal);
    background: var(--control-transparent-bgColor-selected);

    @media (hover: hover) {
      &:hover {
        background-color: var(--control-transparent-bgColor-hover);
      }
    }

    &::before,
    & + .ActionListItem::before {
      visibility: hidden;
    }

    /* blue accent line */

    &::after {
      @mixin activeIndicatorLine calc(-1 * var(--base-size-4));
    }
  }

  /* active state [aria-current] */

  &.ActionListItem--navActive {
    /* provides a visual indication of the current item for Windows high-contrast mode */
    outline: 2px solid transparent;

    &:not(.ActionListItem--subItem) {
      & .ActionListItem-label {
        font-weight: var(--base-text-weight-semibold);
      }
    }

    &:not(.ActionListItem--danger) {
      background: var(--control-transparent-bgColor-selected);

      @media (hover: hover) {
        &:hover {
          background-color: var(--control-transparent-bgColor-hover);
        }
      }

      &::before,
      & + .ActionListItem::before {
        visibility: hidden;
      }

      /* blue accent line  */
      &::after {
        @mixin activeIndicatorLine;
      }
    }
  }

  /* disabled */

  &.ActionListItem--disabled,
  &[aria-disabled='true'] {
    & .ActionListContent {
      & .ActionListItem-label,
      & .ActionListItem-description {
        color: var(--control-fgColor-disabled);
      }

      & .ActionListItem-visual {
        fill: var(--control-fgColor-disabled);
      }
    }

    @media (hover: hover) {
      &:hover {
        cursor: not-allowed;
        background-color: transparent;
      }
    }
  }

  /* variants */

  /* danger */
  &.ActionListItem--danger {
    & .ActionListItem-label {
      color: var(--control-danger-fgColor-rest);
    }

    & .ActionListItem-visual {
      color: var(--control-danger-fgColor-rest);
    }

    @media (hover: hover) {
      &:hover {
        background: var(--control-danger-bgColor-hover);

        & .ActionListItem-label,
        & .ActionListItem-visual,
        & .ActionListItem-description {
          color: var(--control-danger-fgColor-hover);
        }
      }
    }

    & .ActionListContent {
      &:active {
        background: var(--control-danger-bgColor-active);

        & .ActionListItem-label,
        & .ActionListItem-visual,
        & .ActionListItem-description {
          color: var(--control-danger-fgColor-hover);
        }
      }
    }
  }
}
/* ... */

